# Clockit

./: CONTRIBUTING.md  README.md
clockit/: Cargo.toml
clockit/docs/: sample-config.yaml
clockit/src/: digit.rs  main.rs
docs/: Usage.md  installation.md  sample-config.yaml
src/: config.rs  digit.rs  main.rs
